# hw3-emilyma214-alt

./: Makefile  ai_documentation.txt  myst.yml  pyproject.toml  thisisforthetest.ipynb
content/: index.md
ligotools/: utils.py
ligotools.egg-info/: PKG-INFO
ligotools/tests/: test_readligo.py  test_utils.py
